--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -3,11 +3,11 @@
 	<appSettings>
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
-        <add key="ShowUpdate" value="true" />
+        <add key="ShowUpdate" value="false" />
 		<!-- For Windows where there is not Gtk Theme installed -->
     	<!-- Allows the setting of custome themes in Windows enviroments -->
     	<!-- Not Intended for use with Linux -->
-        <add key="AllowCustomTheme" value="true" />
+        <add key="AllowCustomTheme" value="false" />
     	<!-- Used for debugging -->
 		<add key="Debug" value="true"/>
     </appSettings>
