--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		<!-- Common URL Locations -->
+		<add key="ProjectSiteURL" value="http://code.google.com/p/goontools/wiki/MonoBPMonitor"/>
+		<add key="ProjectIssuesURL" value="http://code.google.com/p/goontools/issues/list"/>
+		<add key="OnlineHelpURL" value="http://code.google.com/p/goontools/wiki/MonoBPMonitor"/>
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
         <add key="ShowUpdate" value="false" />
