--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -3,7 +3,7 @@
 	<appSettings>
 		<!-- Common URL Locations -->
 		<add key="ProjectSiteURL" value="http://code.google.com/p/goontools/wiki/MonoBPMonitor"/>
-		<add key="ProjectIssuesURL" value="http://code.google.com/p/goontools/issues/list"/>
+		<add key="ProjectIssuesURL" value="http://code.google.com/p/goontools/issues/entry?template=Defect%20report%20from%20user"/>
 		<add key="OnlineHelpURL" value="http://code.google.com/p/goontools/wiki/MonoBPMonitor"/>
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
