--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -11,7 +11,7 @@
 		<!-- For Windows where there is not Gtk Theme installed -->
     	<!-- Allows the setting of custome themes in Windows enviroments -->
     	<!-- Not Intended for use with Linux -->
-        <add key="AllowCustomTheme" value="false" />
+        <add key="AllowCustomTheme" value="true" />
     	<!-- Used for debugging -->
 		<add key="Debug" value="true"/>
     </appSettings>
